--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "scripts": {
     "build": "tsc  -p tsconfig.build.json",
     "test": "npx jest --coverage",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "ensure-build": "(node -e \"if (!require('fs').existsSync(__dirname + '/dist')) {process.exit(1)}\" || yarn run build)",
+    "prepack": "yarn run ensure-build",
+    "prepare": "yarn run ensure-build"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
